fixed flex align on back to top footer button

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -56,7 +56,7 @@ footer .wrapper {
         margin: 10px;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: end;
         justify-content: center;
         gap: 10px;
         &:hover {
